--- a/codes/AngelEyes/pom.xml
+++ b/codes/AngelEyes/pom.xml
@@ -91,6 +91,11 @@
       <version>1.2</version>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.5.4</version>
