--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+*.js
+*.html
+*.css
+*.xml
+*.pkl
+*.dat
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
